<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_mpei" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cyan_800_overlay" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/spacing_mlarge"
        android:paddingRight="@dimen/spacing_mlarge"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_shape_white"
                    android:padding="25dp"
                    app:srcCompat="@drawable/ic_photo_camera"
                    app:tint="@color/grey_20" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/userName"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:hint="@string/userName"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/password1"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:hint="@string/password1"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/password2"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:hint="@string/password2"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/registration"
                android:theme="@style/Button.White.Primary" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/ProgressBar.White"
                android:layout_gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="У вас уже есть аккаунт?  "
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="ВОЙТИ"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/green_300"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>